# taichi-rs

./: .gitignore  Cargo.toml  README.md
assets/chess_board/: chess_board.py
scripts/: generate_rust_language_binding.py  generate_taichi_c_api.ps1  generate_taichi_c_api.sh
taichi/: Cargo.toml
taichi-sys/: Cargo.toml  build.rs
taichi-sys/src/: lib.rs  taichi_core.rs  taichi_cpu.rs  taichi_cuda.rs  taichi_opengl.rs  taichi_unity.rs  taichi_vulkan.rs
taichi/src/: aot_module.rs  compute_graph.rs  error.rs  image.rs  lib.rs  memory.rs  ndarray.rs  runtime.rs  texture.rs  version.rs
taichi/src/tests/: mod.rs
