[package]
name = "taichi-sys"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
version = "0.0.6+1.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust language binding to the Taichi Runtime C-API."
links = "taichi_c_api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"

[build-dependencies]
dotenvy = "0.15"
