[package]
name = "taichi-runtime" # Should be `taichi` but it's been occupied.
version = "0.0.1+1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
taichi-sys = { version = "*", path = "../taichi-sys" }
