[package]
name = "taichi-runtime" # Should be `taichi` but it's been occupied.
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
version = "0.0.5+1.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust language binding to the Taichi Runtime C-API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
taichi-sys = { version = "0.0.5", path = "../taichi-sys" }
